Fix volunteer management sidebar alignment

--- a/src/app/components/UserSidebar.module.css
+++ b/src/app/components/UserSidebar.module.css
@@ -1,7 +1,7 @@
 .sidebar {
   position: fixed;
   right: 0;
-  top: 99px;
+  top: 7.7rem;
   width: 32rem;
   z-index: 50;
   background: #ffffff;
